--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "react-course-app",
   "version": "0.1.0",
   "private": true,
-  "homepage": "http://nayan-savi.github.io/react-course-app",
+  "homepage": "https://nayan-savi.github.io/react-course-app/",
   "dependencies": {
     "@material-ui/core": "^4.11.0",
     "@opuscapita/react-icons": "^4.0.14",
@@ -12,6 +12,7 @@
     "axios": "^0.19.2",
     "bootstrap": "^4.5.0",
     "formik": "^2.1.5",
+    "gh-pages": "^3.1.0",
     "react": "^16.13.1",
     "react-bootstrap": "^1.2.2",
     "react-dom": "^16.13.1",
@@ -23,9 +24,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
-	"predeploy": "npm run build",
-	"deploy": "gh-pages -d build"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
